# ai-content-plagiarism-detection

./: .gitignore  README.md  app.py  oauth_secret.json  pyproject.toml  requirements.txt
src/ai_content_plagiarism_detection/: app.py  crew.py  gradio_app.py  launch_app.py  main.py
src/ai_content_plagiarism_detection/config/: agents.yaml  tasks.yaml
src/ai_content_plagiarism_detection/utils/: file_processor.py  output_formatter.py
