[project]
name = "ai_content_plagiarism_detection"
version = "0.1.0"
description = "ai-content-plagiarism-detection using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
ai_content_plagiarism_detection = "ai_content_plagiarism_detection.main:run"
run_crew = "ai_content_plagiarism_detection.main:run"
train = "ai_content_plagiarism_detection.main:train"
replay = "ai_content_plagiarism_detection.main:replay"
test = "ai_content_plagiarism_detection.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
